# tenax-mcp

./: README.md  pyproject.toml
src/tenax_mcp/: __init__.py  __main__.py  codegen.py  contraction.py  hamiltonian.py  server.py  solvers.py
tests/: test_tools.py
