[project]
name = "tenax-mcp"
version = "0.1.0"
description = "MCP server exposing Tenax tensor network tools for Claude Code and Claude Desktop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["tensor-network", "mcp", "claude", "dmrg", "trg", "ipeps", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mcp[cli]>=1.0",
    "tenax-tn>=0.1.0",
]

[project.scripts]
tenax-mcp = "tenax_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenax_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
